--- a/src/components/buttons/button.css
+++ b/src/components/buttons/button.css
@@ -1,9 +1,10 @@
 .button {
-    display: flex;
+    display: inline-flex;
+    align-items: center;
     height: 32px;
-    width: 170px;
+    width: 100%;
     border-radius: 3px;
-    background-color: rgb(214, 212, 212);
+    background-color: rgba(9,30,66,.04);
     cursor: pointer;
     border: none;
     padding: 6px 12px;
@@ -12,5 +13,5 @@
 }
 
 .button:hover {
-    background-color: rgb(199, 196, 196);
+    background-color: rgba(9, 30, 66, 0.205);
 }
