--- a/src/components/Data/Data.css
+++ b/src/components/Data/Data.css
@@ -1,8 +1,10 @@
-.myDate{
-    cursor: pointer;
-    border: none;
-    outline: none;
-    width: 100%;
-    margin: 0;
-    background-color: rgba(9,30,66,.04)
+.myDate {
+	width: 100%;
+	margin: 0;
+
+	cursor: pointer;
+
+	border: none;
+	outline: none;
+	background-color: rgba(9, 30, 66, 0.04);
 }
