--- a/src/components/buttons/button.css
+++ b/src/components/buttons/button.css
@@ -1,18 +1,15 @@
 .button {
 	display: inline-flex;
 	align-items: center;
-
 	box-sizing: border-box;
 	width: 100%;
 	height: 32px;
 	margin-top: 8px;
 	padding: 6px 12px;
-
 	cursor: pointer;
-
 	border: none;
 	border-radius: 3px;
-	background-color: rgba(9, 30, 66, 0.04);
+	background-color: rgb(214, 212, 212);
 }
 
 .button:hover {
