--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,9 +1,7 @@
 .card {
 	overflow: hidden;
-
 	width: 275px;
 	margin: 10px;
-
 	border-radius: 5px;
 	background-color: rgb(214, 212, 212);
 }
@@ -18,19 +16,18 @@
 
 .card__title-text {
 	padding: 10px 8px;
-
 	text-align: left;
-
-	color: #172B4D;
-
-	font-size: 20px;
-	font-weight: 500;
+	color: #172b4d;
+	font-size: 14px;
+	font-weight: 400;
 }
 
 .card__list {
 	width: 32px;
 	height: 32px;
 	margin-right: 5px;
-
 	text-align: end;
+}
+.card__button {
+	color: #5e6c84;
 }
