--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,9 +1,8 @@
 .card {
 	overflow: hidden;
-
 	width: 275px;
+	max-height: 350px;
 	margin: 10px;
-
 	border-radius: 5px;
 	background-color: rgb(214, 212, 212);
 }
@@ -13,25 +12,34 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-
 	height: 40px;
 }
 
 .card__title-text {
 	padding: 10px 8px;
-
 	text-align: left;
-
-	color: #172B4D;
-
-	font-size: 20px;
-	font-weight: 500;
+	color: #172b4d;
+	font-size: 14px;
+	font-weight: 400;
 }
 
 .card__list {
-	width: 32px;
-	height: 32px;
+	width: 255px;
 	margin-right: 5px;
-
 	text-align: end;
+	overflow-wrap: break-word;
+	overflow: hidden;
+	padding: 0 10px;
+	word-break: break-all;
+	
+
+}
+.card_list-tasks{
+	padding: 0 10px;
+	overflow-wrap: break-word;
+	overflow: hidden;
+	word-break: break-all;
+}
+.card__button {
+	color: #5e6c84;
 }
