Karseka-buttn-JS-data-input

--- a/src/components/NewCard/NewCard.css
+++ b/src/components/NewCard/NewCard.css
@@ -177,3 +177,12 @@ body {
 
 	list-style-type: none;
 }
+
+.new__card-header-close {
+	font-size: 20px;
+	cursor: pointer;
+}
+
+.save {
+	width: 20%;
+}
