--- a/src/components/UserSearch/UserSearch.css
+++ b/src/components/UserSearch/UserSearch.css
@@ -1,3 +1,21 @@
+.overlay {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+
+}
+.modal{
+    opacity: 0;
+    visibility: hidden;
+}
+.modal.active{
+    opacity: 1;
+    visibility: visible;
+}
 .user-search {
     padding: 5px;
     flex-direction: column;
@@ -5,15 +23,14 @@
     background-color: white;
     width: 300px;
     height: 390px;
-    position: absolute;
-    top: 315px;
-    right: 230px;
+    position: fixed;
+    top: 200px;
+    right: 250px;
     color: #3c5279;
-    z-index: 5;
+    z-index: 20;
     font-size: 14px;
-    /* opacity: 0;
-    visibility: hidden; */
 }
+
 .user-search__header{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1ак;
