--- a/src/components/UserSearch/UserSearch.css
+++ b/src/components/UserSearch/UserSearch.css
@@ -6,15 +6,6 @@
     background-color: rgba(0, 0, 0, 0.3);
     width: 100%;
     height: 100%;
-
-}
-.modal{
-    opacity: 0;
-    visibility: hidden;
-}
-.modal.active{
-    opacity: 1;
-    visibility: visible;
 }
 .user-search {
     padding: 5px;
@@ -30,10 +21,9 @@
     z-index: 20;
     font-size: 14px;
 }
-
 .user-search__header{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1ак;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 'none title exit';
     border-bottom-style: solid;
@@ -52,11 +42,23 @@
 }
 .user-search__header--exit{
     grid-area: exit;
-    text-align: end;
     text-decoration: none;
+    cursor: pointer;
+    text-align: center;
+    width: 35px;
+    height: 35px;
+    border-style: solid;
+    border-color: rgb(226, 226, 226);
+    border-radius: 70px;
+    margin-right: 10px;
+    background-color: rgb(226, 226, 226);
+    padding-top: 3px;
+    margin-left: 30px;
+
 }
 .user-search__header--exit:hover{
-    color: red;
+    border-color: rgb(194, 182, 182);
+    background-color: rgb(194, 182, 182);
 }
 .user-search__list-wraper{
     font-size: 20px;
