опустил вниз кнопку в todo, пробрасывание статуса карточки (перемещение todo -> in_progress -> done), тайтл можно фиксить, но есть баг, на в самой карте он обновляеться только после перезагрузки страницы

--- a/src/components/NewCard/NewCard.css
+++ b/src/components/NewCard/NewCard.css
@@ -1,4 +1,3 @@
-
 .new__card {
 	position: relative;
 
@@ -23,18 +22,26 @@
 	margin-bottom: 30px;
 }
 
-.new__card-header-name {
-	margin-bottom: 10px;
+.new__card-header-right {
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+}
 
+.new__card-header-right .new__card-header-name {
+	border: none;
+	box-shadow: none;
+	width: 100%;
 	font-size: 18px;
 	font-weight: 600;
 	line-height: 20px;
+	background-color: #F4F5F7;
 }
 
 .new__card-header-ststus {
 	display: inline-flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: baseline;
 
 	color: #5E6C84;
 
