--- a/src/components/NewCard/NewCard.css
+++ b/src/components/NewCard/NewCard.css
@@ -1,3 +1,13 @@
+.wrapper__new-card {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+}
+
 .new__card {
 	position: relative;
 
@@ -5,14 +15,12 @@
 
 	width: 768px;
 	min-height: 600px;
-	margin: 80px auto;
-	margin-top: -200px;
+	margin: 70px auto;
 	padding: 20px;
 
 	border-radius: 2px;
 
 	background: #F4F5F7;
-	box-shadow: 0 0 7px 1000px rgba(0, 0, 0, 0.3);
 }
 
 .new__card-header {
