--- a/src/components/EventCard/EventCard.css
+++ b/src/components/EventCard/EventCard.css
@@ -1,32 +1,37 @@
 .eventCard {
-    width: 300px;
-    height: 110px;
-    background-color: #fff;
-    align-items: center;
-    text-align: center;
-    border-radius: 5px;
-    justify-content: center;
-    align-items: center;
-    margin: 20px auto;
-    position: relative;
-    z-index: 100;
-    
-    }
-    .eventCard__title{
-        margin-bottom: 15px;
-        padding-top: 10px;
-        font-size: 20px;
-        font-weight: bold;
-        color: red;
-        background-color: rgb(238, 215, 215);
-    }
-    
-    .eventCard__text{
-    font-size: 18px;
-    }
-    .eventCard__footer{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        
-    }
+	position: relative;
+	z-index: 10;
+
+	align-items: center;
+	justify-content: center;
+
+	width: 300px;
+	height: 110px;
+	margin: 20px auto;
+
+	text-align: center;
+
+	border-radius: 5px;
+	background-color: #FFF;
+}
+
+.eventCard__title {
+	margin-bottom: 15px;
+	padding-top: 10px;
+
+	color: red;
+	background-color: rgb(238, 215, 215);
+
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.eventCard__text {
+	font-size: 18px;
+}
+
+.eventCard__footer {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
