--- a/src/components/LimitCard/LimitCard.css
+++ b/src/components/LimitCard/LimitCard.css
@@ -1,27 +1,37 @@
 .limitCard {
-width: 300px;
-height: 110px;
-background-color: #fff;
-align-items: center;
-text-align: center;
-border-radius: 5px;
-justify-content: center;
-align-items: center;
-margin: 20px auto;
-}
-.limitCard__title{
-    margin-bottom: 15px;
-    padding-top: 10px;
-    font-size: 20px;
-    font-weight: bold;
-    color: red;
+	position: absolute;
+	z-index: 11;
+
+	align-items: center;
+	justify-content: center;
+
+	margin: 20px auto;
+
+	text-align: center;
+
+	border-radius: 5px;
+	background-color: #FFF;
 }
 
-.limitCard__notice{
-font-size: 18px;
+.limitCard__title {
+	margin-bottom: 15px;
+	padding-top: 10px;
+
+	color: red;
+
+	font-size: 20px;
+	font-weight: bold;
 }
-.limitCard__footer{
-    justify-content: center;
-    align-items: center;
-    margin: 5px auto;
+
+.limitCard__notice {
+	padding: 5px;
+
+	font-size: 18px;
+}
+
+.limitCard__footer {
+	align-items: center;
+	justify-content: center;
+
+	margin: 5px auto;
 }
