--- a/src/components/UserSearch/UserSearch.css
+++ b/src/components/UserSearch/UserSearch.css
@@ -1,129 +1,166 @@
 .overlay {
-    position: fixed;
-    z-index: 10;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 100%;
+	position: fixed;
+	z-index: 10;
+	top: 0;
+	left: 0;
+
+	width: 100%;
+	height: 100%;
+
+	background-color: rgba(0, 0, 0, 0.3);
 }
+
 .user-search {
-    padding: 5px;
-    flex-direction: column;
-    border-radius: 5px;
-    background-color: white;
-    width: 300px;
-    height: 390px;
-    position: fixed;
-    top: 200px;
-    right: 250px;
-    color: #3c5279;
-    z-index: 20;
-    font-size: 14px;
-}
-.user-search__header{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: 'none title exit';
-    border-bottom-style: solid;
-    border-width: 1px;
-    font-size: 25px;
-    margin-bottom: 5px;
-    grid-gap: 5px;
-    height: 40px;
-    color: #172b4d
-}
-.user-search__header--title{
-    grid-area: title;
-    text-align: center;
-    padding-top: 10px;
+	position: fixed;
+	z-index: 20;
+	top: 200px;
+	right: 250px;
 
-}
-.user-search__header--exit{
-    grid-area: exit;
-    text-decoration: none;
-    cursor: pointer;
-    text-align: center;
-    width: 35px;
-    height: 35px;
-    border-style: solid;
-    border-color: rgb(226, 226, 226);
-    border-radius: 70px;
-    margin-right: 10px;
-    background-color: rgb(226, 226, 226);
-    padding-top: 3px;
-    margin-left: 30px;
+	flex-direction: column;
 
+	width: 300px;
+	height: 390px;
+	padding: 5px;
+
+	color: #3C5279;
+	border-radius: 5px;
+	background-color: white;
+
+	font-size: 14px;
 }
-.user-search__header--exit:hover{
-    border-color: rgb(194, 182, 182);
-    background-color: rgb(194, 182, 182);
+
+.user-search__header {
+	display: grid;
+
+	height: 40px;
+	margin-bottom: 5px;
+
+	color: #172B4D;
+	border-width: 1px;
+	border-bottom-style: solid;
+
+	font-size: 25px;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr;
+	grid-template-areas: 'none title exit';
+	grid-gap: 5px;
 }
-.user-search__list-wraper{
-    font-size: 20px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;  
+
+.user-search__header--title {
+	padding-top: 10px;
+
+	text-align: center;
+	grid-area: title;
 }
-.user-search__title2{
-    text-align: left;
-    font-size: 20px;
-    justify-content: left;
-    
-    margin-bottom: 10px;
-    margin-top: 5px;
-    padding-left: 5px;
-    
+
+.user-search__header--exit {
+	width: 35px;
+	height: 35px;
+	margin-right: 10px;
+	margin-left: 30px;
+	padding-top: 3px;
+
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+
+	border-style: solid;
+	border-color: rgb(226, 226, 226);
+	border-radius: 70px;
+	background-color: rgb(226, 226, 226);
+	grid-area: exit;
 }
-#app{
-    padding: 5px;
-    width: auto;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    height: 300px;
-    width: 290px;
+
+.user-search__header--exit:hover {
+	border-color: rgb(194, 182, 182);
+	background-color: rgb(194, 182, 182);
 }
-#app::-webkit-scrollbar{
-    display: none;
+
+.user-search__list-wraper {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+
+	text-align: center;
+
+	font-size: 20px;
 }
-.user-search__form--user-list{
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: 5px;
+
+.user-search__title2 {
+	justify-content: left;
+
+	margin-top: 5px;
+
+	margin-bottom: 10px;
+	padding-left: 5px;
+
+	text-align: left;
+
+	font-size: 20px;
 }
-.user-search__form--user-list:last-child{
-  margin-bottom: 0px;
+
+#app {
+	overflow-x: hidden;
+	overflow-y: scroll;
+
+	width: auto;
+	width: 290px;
+	height: 300px;
+	padding: 5px;
 }
-.user-search__form--user-list:hover{
-    background-color: rgba(9,30,66,.04);
+
+#app::-webkit-scrollbar {
+	display: none;
 }
-.user-list__avatar{
-    width: 45px;
-    height: 45px;
-    border-style: solid;
-    border-color: rgb(226, 226, 226);
-    border-radius: 70px;
-    margin-right: 10px;
-    background-color: rgb(226, 226, 226);  
+
+.user-search__form--user-list {
+	display: flex;
+	align-items: flex-start;
+
+	margin-bottom: 5px;
 }
-.user-list__avatar:hover{
-    border-color: rgb(194, 182, 182);
-    background-color: rgb(194, 182, 182);
+
+.user-search__form--user-list:last-child {
+	margin-bottom: 0;
 }
-.user-list__initial{
-    text-align: center;
-    margin-top: 10px;
-    font-size: 90%;
+
+.user-search__form--user-list:hover {
+	background-color: rgba(9, 30, 66, 0.04);
 }
-.user-list--ticker{
-    display: flex;
-    align-items: flex-start;
-    float: left;
-    margin-top: 10px;
-    overflow: hidden;
+
+.user-list__avatar {
+	width: 45px;
+	height: 45px;
+	margin-right: 10px;
+
+	border-style: solid;
+	border-color: rgb(226, 226, 226);
+	border-radius: 70px;
+	background-color: rgb(226, 226, 226);
 }
-.user-list__name{
-    text-align: left;
+
+.user-list__avatar:hover {
+	border-color: rgb(194, 182, 182);
+	background-color: rgb(194, 182, 182);
+}
+
+.user-list__initial {
+	margin-top: 10px;
+
+	text-align: center;
+
+	font-size: 90%;
+}
+
+.user-list--ticker {
+	display: flex;
+	float: left;
+	overflow: hidden;
+	align-items: flex-start;
+
+	margin-top: 10px;
+}
+
+.user-list__name {
+	text-align: left;
 }
