--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -75,6 +75,10 @@ body {
 	color: honeydew;
 }
 
+.container-global {
+	position: relative;
+}
+
 .container-cards {
 	display: flex;
 }
@@ -128,11 +132,11 @@ textarea {
 }
 
 @media (max-width: 800px) {
-	.wrapper{
+	.wrapper {
 		margin: 0;
 	}
+
 	.container-cards {
 		flex-direction: column;
 	}
-
 }
