--- a/src/components/EventCard/EventCard.css
+++ b/src/components/EventCard/EventCard.css
@@ -1,33 +1,30 @@
 .eventCard {
 	position: relative;
-	z-index: 10;
-
+	z-index: 15;
 	align-items: center;
 	justify-content: center;
-
 	width: 300px;
-	height: 110px;
+	height: 130px;
 	margin: 20px auto;
-
 	text-align: center;
-
 	border-radius: 5px;
-	background-color: #FFF;
+	background-color: #F4F5F7;
+	border: 1px groove #172B4D;
+	box-shadow: 5px 5px 5px #a6adb1;
 }
 
 .eventCard__title {
 	margin-bottom: 15px;
 	padding-top: 10px;
-
-	color: red;
-	background-color: rgb(238, 215, 215);
-
+	background-color: rgba(9, 30, 66, 0.205);
+	color: #172B4D;
 	font-size: 20px;
 	font-weight: bold;
 }
 
 .eventCard__text {
-	font-size: 18px;
+	font-size: 16px;
+	padding: 10px 5px;
 }
 
 .eventCard__footer {
