--- a/src/components/Buttons/Button.css
+++ b/src/components/Buttons/Button.css
@@ -1,5 +1,5 @@
 .button {
-	display: inline-flex;
+	display: inline-block;
 	align-items: center;
 
 	box-sizing: border-box;
@@ -13,6 +13,11 @@
 	border: none;
 	border-radius: 3px;
 	background-color: rgba(9, 30, 66, 0.04);
+	margin-right: 5px;
+}
+
+.button:last-child{
+	margin-right: 0;
 }
 
 .button:hover {
