--- a/src/components/NewCard/NewCard.css
+++ b/src/components/NewCard/NewCard.css
@@ -137,8 +137,8 @@
 
 .card-info__description-wrapper,
 .card-info__actions-wrapper {
-	display: flex;
-	align-items: center;
+	/* display: flex;
+	align-items: center; */
 
 	margin-bottom: 15px;
 }
