--- a/src/components/EventCard/EventCard.css
+++ b/src/components/EventCard/EventCard.css
@@ -1,6 +1,17 @@
+.wrapper_eventCard{
+	position: fixed;
+	z-index: 14;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
 .eventCard {
-	position: relative;
-	z-index: 15;
+	position: absolute;
+	z-index: 16;
+	top: 250px;
+	left: 630px;
 	align-items: center;
 	justify-content: center;
 	width: 300px;
@@ -10,7 +21,7 @@
 	border-radius: 5px;
 	background-color: #F4F5F7;
 	border: 1px groove #172B4D;
-	box-shadow: 5px 5px 5px #a6adb1;
+	
 }
 
 .eventCard__title {
