--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,8 +1,11 @@
 .card {
 	position: relative;
+
 	overflow: hidden;
+
 	width: 275px;
 	margin: 10px;
+
 	border-radius: 5px;
 	background-color: #F4F5F7;
 }
@@ -15,22 +18,28 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+
 	height: 40px;
 }
 
 .card__title-text {
 	padding: 10px 8px;
+
 	text-align: left;
+
 	color: #172B4D;
+
 	font-size: 20px;
 	font-weight: 500;
 }
 
 .card__list {
 	overflow: hidden;
+
 	width: 255px;
 	margin-right: 5px;
 	padding: 0 10px;
+
 	text-align: end;
 	word-break: break-all;
 	overflow-wrap: break-word;
@@ -38,15 +47,26 @@
 
 .card_list-tasks {
 	overflow: hidden;
+
 	padding: 0 10px;
+
 	word-break: break-all;
 	overflow-wrap: break-word;
 }
 
 .card__button {
-	display: flex;
 	position: absolute;
 	bottom: 0;
+
+	display: flex;
+
 	width: 100%;
+
 	color: #5E6C84;
+}
+
+@media (max-width: 800px) {
+	.card {
+		max-width: 100%;
+	}
 }
