--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,31 +12,34 @@ html {
 }
 
 body {
-	width: 1200px;
+	max-width: 1200px;
 	margin: 0 auto;
+
 	white-space: nowrap;
+
 	color: #172B4D;
-	background: url(/src/img/sky-1.jpg) repeat;
+	background: url(/src/img/sky-1.jpg);
 	background-size: cover;
+
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 17px;
 	font-weight: 400;
 }
 
 .wrapper {
-	
-	max-width: 100%;
+	max-width: 1100px;
 	margin: 0 auto;
 	padding: 0 10px 50px 10px;
 }
 
 /* slyles header */
 .header {
-
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+
 	padding: 20px;
+
 	font-size: 30px;
 	font-weight: 600;
 }
@@ -74,13 +77,12 @@ body {
 }
 
 .container-global {
-	
 	position: relative;
 }
 
 .container-cards {
-	justify-content: space-around;
 	display: flex;
+	justify-content: space-around;
 }
 
 .textarea {
