--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -23,13 +23,13 @@
 }
 
 .card__title-text {
-	padding: 10px 8px;
+	padding: 10px 20px;
 
 	text-align: left;
 
 	color: #172B4D;
 
-	font-size: 20px;
+	font-size: 22px;
 	font-weight: 500;
 }
 
@@ -67,6 +67,6 @@
 
 @media (max-width: 800px) {
 	.card {
-		max-width: 100%;
+		width: 70%;
 	}
 }
