--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -115,7 +115,7 @@ textarea {
 
 	height: 100%;
 	min-height: 30px;
-	margin-bottom: 10px;
+	margin: 10px;
 	padding: 0 5px;
 
 	word-break: break-all;
