--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,6 @@
 @import url('./normolize.css');
 @import url('../fonts/icomoon/style.css');
+@import url('../css/fonts.css');
 
 html {
 	box-sizing: border-box;
@@ -21,7 +22,7 @@ body {
 	background: url(/src/img/sky-1.jpg);
 	background-size: cover;
 
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'GoogleSans', Arial, Helvetica, sans-serif;
 	font-size: 17px;
 	font-weight: 400;
 }
@@ -113,12 +114,12 @@ textarea {
 .task {
 	overflow: hidden;
 
-	height: 100%;
+	/* height: fit-content; */
 	min-height: 30px;
 	margin: 10px;
 	padding: 0 5px;
 
-	word-break: break-all;
+	white-space: normal;
 
 	border-radius: 5px;
 	background-color: rgb(233, 233, 233);
