адаптация под мобилку

--- a/src/components/EventCard/EventCard.css
+++ b/src/components/EventCard/EventCard.css
@@ -52,3 +52,10 @@
 	align-items: center;
 	justify-content: space-between;
 }
+@media (max-width: 800px) {
+	.eventCard{
+		top: 50%;
+	    left: 50%;
+		transform: translate(-50%, -50%);
+	}
+}
