--- a/src/components/LimitCard/LimitCard.css
+++ b/src/components/LimitCard/LimitCard.css
@@ -3,24 +3,19 @@
 	z-index: 10;
 	top: 0;
 	left: 0;
-
 	width: 100%;
 	height: 100%;
-
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .limitCard {
-	position: fixed;
+	position: absolute;
 	z-index: 11;
-	top: 250px;
-	left: 540px;
-
+	top: 50%;
+	left: 35%;
 	width: 500px;
 	height: 125px;
-
 	text-align: center;
-
 	border: 1px groove #172B4D;
 	border-radius: 5px;
 	background-color: #F4F5F7;
@@ -29,37 +24,41 @@
 .limitCard__title {
 	margin-bottom: 15px;
 	padding-top: 10px;
-
 	color: #172B4D;
 	background-color: rgba(9, 30, 66, 0.205);
-
 	font-size: 20px;
 	font-weight: bold;
 }
 
 .limitCard__notice {
 	padding: 5px;
-
 	font-size: 18px;
 }
 
 .limitCard__footer {
 	align-items: center;
 	justify-content: center;
-
 	margin: 5px auto;
 }
 
 .limitCard__footer_button {
 	width: 50px;
 	margin: auto;
-
 	text-align: center;
 }
 
 .limitCard__footer_button .button {
 	text-align: center;
-
 	font-size: 20px;
 	font-weight: bold;
+}
+
+@media (max-width: 800px) {
+	.limitCard{
+		top: 50%;
+	    left: 50%;
+		transform: translate(-50%, -50%);
+		width: auto;
+	    height: auto;
+	}
 }
