--- a/src/components/MenuCard/MenuCard.css
+++ b/src/components/MenuCard/MenuCard.css
@@ -3,22 +3,18 @@
 	z-index: 10;
 	top: 0;
 	left: 0;
-
 	width: 100%;
 	height: 100%;
-
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .menu {
-	position: fixed;
+	position: absolute;
 	z-index: 11;
 	top: 80px;
 	right: 220px;
-
 	width: 220px;
 	height: 240px;
-
 	color: #172B4D;
 	border: 1px groove #172B4D;
 	border-radius: 7px;
@@ -33,13 +29,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-
 	height: 40px;
-
 	text-align: center;
-
 	background-color: rgba(9, 30, 66, 0.04);
-
 	font-size: 16px;
 	font-weight: 600;
 }
@@ -50,4 +42,12 @@
 
 .menu_list {
 	padding: 0 5px;
+}
+
+@media (max-width: 800px) {
+	.menu{
+		top: 35%;
+	    right: 5%;
+		transform: translate(0%, -50%);
+	}
 }
