--- a/src/components/NewCard/NewCard.css
+++ b/src/components/NewCard/NewCard.css
@@ -8,6 +8,8 @@
 	height: 100%;
 
 	background-color: rgba(0, 0, 0, 0.3);
+
+	font-family: 'GoogleSans', Arial, Helvetica, sans-serif;
 }
 
 .new__card {
