--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,29 +1,32 @@
 /* regular - latin */
 @font-face {
-    font-family: 'GoogleSans';
-    font-style: normal;
-    font-weight: 400;
-    src: local(''),
-         url('../fonts/GoogleSans-Medium.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/GoogleSans-Regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
+	font-family: "GoogleSans";
+	font-weight: 400;
+	font-style: normal;
+	src:
+		local(""),
+		url("../fonts/GoogleSans-Medium.woff2") format("woff2"),
+		url("../fonts/GoogleSans-Regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 
-  /* medium - latin */
+/* medium - latin */
 @font-face {
-    font-family: 'GoogleSans';
-    font-style: normal;
-    font-weight: 500;
-    src: local(''),
-         url('../fonts/GoogleSans-Medium.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/GoogleSans-Medium.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
+	font-family: "GoogleSans";
+	font-weight: 500;
+	font-style: normal;
+	src:
+		local(""),
+		url("../fonts/GoogleSans-Medium.woff2") format("woff2"),
+		url("../fonts/GoogleSans-Medium.woff") format ("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 
-  /* bold - latin */
+/* bold - latin */
 @font-face {
-    font-family: 'GoogleSans';
-    font-style: normal;
-    font-weight: 700;
-    src: local(''),
-         url('../fonts/GoogleSans-Bold.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/GoogleSans-Bold.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
+	font-family: "GoogleSans";
+	font-weight: 700;
+	font-style: normal;
+	src:
+		local(""),
+		url("../fonts/GoogleSans-Bold.woff2") format("woff2"),
+		url("../fonts/GoogleSans-Bold.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
