--- a/src/components/UserCard/UserCard.css
+++ b/src/components/UserCard/UserCard.css
@@ -1,8 +1,24 @@
-.usercard {
-    background: cornsilk;
+.usercard__wrapper {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	width: 100%;
+	height: 100%;
+
+	background-color: (0, 0, 0, 0.5);
 }
+
+.usercard {
+	position: absolute;
+
+	z-index: 15;
+
+	background: cornsilk;
+}
+
 .usercard__header {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
