--- a/src/components/UserCard/UserCard.css
+++ b/src/components/UserCard/UserCard.css
@@ -1,16 +1,21 @@
 .usercard__wrapper {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
+
+	z-index: 14;
 
 	width: 100%;
 	height: 100%;
 
-	background-color: (0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .usercard {
 	position: absolute;
+
+	top: 50%;
+	left: 45%;
 
 	z-index: 15;
 
