--- a/src/components/UserCard/UserCard.css
+++ b/src/components/UserCard/UserCard.css
@@ -1,9 +1,9 @@
 .usercard__wrapper {
 	position: fixed;
-	top: 0;
-	left: 0;
 
 	z-index: 14;
+	top: 0;
+	left: 0;
 
 	width: 100%;
 	height: 100%;
@@ -14,16 +14,48 @@
 .usercard {
 	position: absolute;
 
-	top: 50%;
-	left: 45%;
-
 	z-index: 15;
 
-	background: cornsilk;
+	top: 40%;
+	left: 45%;
+
+	border-radius: 5px;
+
+	background-color: #F4F5F7;
 }
 
 .usercard__header {
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
+
+	padding: 10px;
+}
+
+.usercard__header-username {
+	font-weight: 600;
+}
+
+.usercard__info {
+	padding: 10px;
+}
+
+.usercard__header-close {
+	padding: 5px 8px;
+
+	border-radius: 50%;
+	background-color: rgb(226, 226, 226);
+}
+
+.usercard__header-close:hover {
+	cursor: pointer;
+
+	background-color: rgba(9, 30, 66, 0.205);
+}
+
+@media (max-width: 800px) {
+	.usercard {
+		top: 20%;
+		left: 10%;
+	}
 }
